# asyncpg-postgreSQL-FastAPI-pgLISTEN-pgNOTIFY

./: .env_example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py  pyproject.toml
app/api/: routes.py
app/api/endpoints/: health.py
app/core/: config.py
app/core/utils/: timeit.py
postgres/: utils.py
src/app/: alembic.ini  asgi.py  main.py
src/app/api/endpoints/: health.py  users.py
src/app/api/schemas/: users.py
src/app/core/: config.py
src/app/core/utils/: timeit.py
src/app/postgres/db/: session.py
src/app/postgres/migrations/: env.py
src/app/postgres/migrations/versions/: 001_add_users_table.py
src/app/postgres/models/: users.py
src/app/postgres/triggers/: templates.py  users_triggers.py
tests/locust/: locustfile.py
tests/locust/request_factories/: base.py  health_factory.py  users_factory.py
