[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = "^0.13.3"
alembic = "^1.4.3"
gino = {version = "^1.0.1", extras = ["starlette"]}
psycopg2 = "^2.8.6"
boltons = "^20.2.1"
ujson = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
aiohttp = "^3.7.3"
pre-commit = "^2.9.3"
locust = "^1.4.1"
faker = "^5.6.5"


[tool.poetry.plugins]

[tool.poetry.plugins."app.modules"]
"users" = "app.api.endpoints.users"
"health" = "app.api.endpoints.health"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']
exclude = '/(\.git|\.pytest_cache|docker|migrations)/'
