[tool.poetry]
name = "asyncog-postgreSQL-FastAPI"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = "^0.13.3"
asyncpg = "^0.21.0"

[tool.black]
line-length = 120
target-version = ['py38']
exclude = '/(\.git|\.pytest_cache|docker|migrations)/'
